# ssrf-command-console

./: .gitignore  Dockerfile  Makefile  README.md  analyzer.py  cleanup_ssrf_console.sh  config.yaml  dashboard.py  dashboard_web.py  dispatcher.py  docker-compose.yml  gunicorn_conf.py  healthcheck.sh  main.py  metadata_tools.py  mode_template.py  nohup.out  ops.py  preflight_scanner.py  requirements.in  run.py  run_all.sh  run_backend.bat  run_backend.sh  run_tui.sh  run_uvicorn.py  scanner_launcher.py  ssrf_config.json  targets_history.json  test_autosync.txt  tui_health.py  validate_tree.py  verify_structure.py  ws_dashboard_unused.py
app/: main.py  models.py  users.json
console/: colors.py  favorites.py  history.py  menu.py  ui.py
dashboard/: index.html
dev/: requirements_full.txt
docs/: Developer_Guide.md  README.md
modes/: diagnostic_mode.py  dns_mode.py  file_mode.py  gopher_mode.py  header_probe_mode.py  metadata_mode.py  metdata_mode.py  mode_d.py  raw_socket_mode.py  redirect.py  redirect_mode.py  smugglilne_mode.py  smuggling.py  smuggling_mode.py  test_mode.py
plugins/: banner_grabber.py  dns_extra.py  hash_tools.py  http_extra.py  math_tools.py  port_scanner.py  ssl_tools.py  text_tools.py  utility_tools.py
scripts/: auto_pull.sh  auto_push.sh  backend_ops.sh  check_environment.py  checks_docker_check.py  kill_and_restart.sh  kill_and_restat.sh  (+5 more)
ssrf_manager/: backend_service.py  pyproject.toml
ssrf_manager/ssrf_manager/: actions.py  backend_service.py  config.py  manager.py  processess.py  tui.py  tui.py.save  tui_curses.py  utils.py
(+91 files in other folders)
