[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssrf-manager"
version = "1.0.0"
description = "Modular SSRF Console Manager"
authors = [{ name = "Charles Roberts" }]
requires-python = ">=3.8"
dependencies = [
    "uvicorn",
    "click",
]

[project.scripts]
ssrf-manager = "ssrf_manager.manager:cli"
